deploy/Prod/Kubernetes/k8s/namespace.yml
# Configurado informações da aplicação

apiVersion: v1
kind: Namespace
metadata:
  name: gregorian
