deploy/Prod/Kubernetes/k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gregorian-api 
  namespace: gregorian
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gregorian-api
  template:
    metadata:
      labels:
        app: gregorian-api
    spec:
      containers:
      - name: gregorian-api
        image: guiflauzino18/gregorian-api:latest
        resources:
          limits: #Limits são o máximo de recursos que um pod pode ter. Outra opção é requests que define o mínimo de recursos
            memory: "1Gi" #1 GB de memória ram. Se o container tentar usar mais memória ele será emcerrado com status de OOMKilled - Out Of Memory Killed
            cpu: "500m" #500 milicore de cpu. 1000 milicore equivale a 1 núcleo. 500m equivale a 0.5 núcleos. Se o container tentar usar mais cpus dará um erro de throttled (limitado), mas não será termiando.
        ports:
        - containerPort: 8080
