deploy/Prod/Kubernetes/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gregorian-app
  namespace: gregorian
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gregorian-app
  template:
    metadata:
      labels:
        app: gregorian-app
    spec:
      containers:
      - name: gregorian-app
        image: guiflauzino18/gregorian-app:latest
        resources:
          limits: #Limits são o máximo de recursos que um pod pode ter. Outra opção é requests que define o mínimo de recursos
            memory: 128Mi #128 Megabytes de memória ram. Se o container tentar usar mais memória ele será emcerrado com status de OOMKilled - Out Of Memory Killed
            cpu: 500m #500 milicores. 1000m equivale a 1 núcleo de CPU. Se o container tentar usar mais cpus dará um erro de throttled (limitado), mas não será termiando.
        ports:
        - containerPort: 80
