deploy/Prod/Kubernetes/k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gregorian-api #Nome do service deve ser único dentro do namespace
  namespace: gregorian
spec:
  selector: #Quais pods serão incluídos no service.
    app: gregorian-api #Busca pods que sejam app=gregorian-api
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP # Expõe o serviço em um IP interno do Cluster
                  # NodePort: Expõe o serviço em uma porta específica de cada nó.
                  # LoadBalancer: Expõe o serviço extarnamente usando um balanceador de carga
                  # ExternalName: Mapeia o serviço para um nome DNS Externo
