deploy/Prod/Kubernetes/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gregorian-app
  namespace: gregorian
spec:
  selector:
    app: gregorian-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
