deploy/Prod/Kubernetes/k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: gregorian
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
